components/src/SignRequest/SignRequest.css
.container {
  padding: 25px 0 15px;
}

.actions, .signDetails {
  display: inline-block;
  vertical-align: middle;
  min-height: 120px;
}

.signDetails {
  border-right: 1px solid #eee;
  margin-right: 2rem;
  /* TODO [todr] mess - just to align with transaction */
  width:  430px;
}

.address, .info {
  display: inline-block;
}

.info {
  padding: 0 30px;
  width: 250px;
  color: #E53935;
  font-size: 17px;
  vertical-align: top;
}

/* TODO [todr] copy&paste from transactions */
.isConfirmed {
  color: green;
}

.txHash {
  word-break: break-all;
}

.signDetails img {
  display: inline-block;
  width: 50px;
  height: 50px;
  margin: 5px;
}

